--- a/index.html
+++ b/index.html
@@ -3,87 +3,64 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tabs</title>
+    <title>Countdown</title>
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section class="section">
-      <div class="title">
-        <h2>about</h2>
+    <section class="section-center">
+      <!-- image -->
+      <article class="gift-img">
+        <img src="./gift.jpeg" alt="gift" />
+      </article>
+      <!-- info -->
+      <article class="gift-info">
+        <h3>old iphone giveaway</h3>
+        <h4 class="giveaway">
+          giveaway ends on Sunday, 24 April 2020, 8:00am
+        </h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum,
-          aperiam!
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Reprehenderit molestiae cum libero atque ut voluptate qui consectetur
+          aliquid incidunt voluptatem quos, dolore, non commodi quaerat aliquam
+          eligendi, quisquam totam blanditiis.
         </p>
-      </div>
-
-      <div class="about-center section-center">
-        <article class="about-img">
-          <img src="./hero-bcg.jpeg" alt="" />
-        </article>
-        <article class="about">
-          <!-- btn container -->
-          <div class="btn-container">
-            <button class="tab-btn active" data-id="history">history</button>
-            <button class="tab-btn" data-id="vision">vision</button>
-            <button class="tab-btn" data-id="goals">goals</button>
+        <div class="deadline">
+          <!-- days -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="days">34</h4>
+              <span>days</span>
+            </div>
           </div>
-          <div class="about-content">
-            <!-- single item -->
-            <div class="content active" id="history">
-              <h4>history</h4>
-              <p>
-                I'm baby wolf pickled schlitz try-hard normcore marfa man bun
-                mumblecore vice pop-up XOXO lomo kombucha glossier bicycle
-                rights. Umami kinfolk salvia jean shorts offal venmo. Knausgaard
-                tilde try-hard, woke fixie banjo man bun. Small batch tumeric
-                mustache tbh wayfarers 8-bit shaman chartreuse tacos. Viral
-                direct trade hoodie ugh chambray, craft beer pork belly flannel
-                tacos single-origin coffee art party migas plaid pop-up.
-              </p>
+          <!-- end of days -->
+          <!-- days -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="hours">34</h4>
+              <span>hours</span>
             </div>
-            <!-- end of single item -->
-            <!-- single item -->
-            <div class="content" id="vision">
-              <h4>vision</h4>
-              <p>
-                Man bun PBR&B keytar copper mug prism, hell of helvetica. Synth
-                crucifix offal deep v hella biodiesel. Church-key listicle
-                polaroid put a bird on it chillwave palo santo enamel pin,
-                tattooed meggings franzen la croix cray. Retro yr aesthetic four
-                loko tbh helvetica air plant, neutra palo santo tofu mumblecore.
-                Hoodie bushwick pour-over jean shorts chartreuse shabby chic.
-                Roof party hammock master cleanse pop-up truffaut, bicycle
-                rights skateboard affogato readymade sustainable deep v
-                live-edge schlitz narwhal.
-              </p>
-              <ul>
-                <li>list item</li>
-                <li>list item</li>
-                <li>list item</li>
-              </ul>
-            </div>
-            <!-- end of single item -->
-            <!-- single item -->
-            <div class="content" id="goals">
-              <h4>goals</h4>
-              <p>
-                Chambray authentic truffaut, kickstarter brunch taxidermy vape
-                heirloom four dollar toast raclette shoreditch church-key.
-                Poutine etsy tote bag, cred fingerstache leggings cornhole
-                everyday carry blog gastropub. Brunch biodiesel sartorial mlkshk
-                swag, mixtape hashtag marfa readymade direct trade man braid
-                cold-pressed roof party. Small batch adaptogen coloring book
-                heirloom. Letterpress food truck hammock literally hell of wolf
-                beard adaptogen everyday carry. Dreamcatcher pitchfork yuccie,
-                banh mi salvia venmo photo booth quinoa chicharrones.
-              </p>
-            </div>
-            <!-- end of single item -->
           </div>
-        </article>
-      </div>
+          <!-- end of days -->
+          <!-- minutes -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="minutes">34</h4>
+              <span>mins</span>
+            </div>
+          </div>
+          <!-- end of days -->
+          <!-- minutes -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="seconds">34</h4>
+              <span>secs</span>
+            </div>
+          </div>
+          <!-- end of days -->
+        </div>
+      </article>
     </section>
     <!-- javascript -->
     <script src="app.js"></script>
